API penjada i funcionant
